      - source-package-component-has-long-file-name
      - upstart-job-in-etc-init.d-not-registered-via-update-rc.d
      - debian-rules-uses-deprecated-makefile
    + Removed:
      - calls-suidperl-directly
      - suid-perl-script-but-no-perl-suid-dep

  * checks/*:
    + [NT] Migrated to use new methods in the Lintian::Collect
      interfaces rather than accessing the Lab directly.
  * checks/{cruft,fields}{,.desc}:
    + [NT] Relocated doc pkg not arch all tag; it was never
      triggered since cruft was a source check and the tag
      could only be triggered for binary packages.
  * checks/binaries:
    + [NT] Added lib/${MULTIARCH_DIR} to the list of paths to
      check for public shared libraries.  Thanks to Sven Joachim
      for the report and the patch.  (Closes: #630698)
    + [NT] Recognise .gox files as object files that cannot be
      stripped.  Thanks to Matthias Klose for the report.
      (Closes: #624521)
    + [NT] Do not assume that the architecture field is present.
  * checks/circular-deps.desc:
    + [NT] Fixed typo; thanks to Nicolás Alvarez for the report
      and patch.  (Closes: #630925)
  * checks/copyright-file:
    + [NT] Stricten one of the regexes for catching left over
      helper templates.  This should prevent false-positives for
      some license texts.  Thanks to Charles Plessy for the
      report.  (Closes: #631674)
    + [NT] Use group data to determine if a package is foreign
      or not for symlinked /usr/share/doc/<pkg> dirs.  This
      avoids the need for symlinks between packages in the
      lab.
  * checks/deb-format{,.desc}:
    + [NT] Allow data.tar.xz as the third member.  Thanks to
      Ansgar Burchardt for the report and patch.
      (Closes: #632556)
  * checks/debhelper:
    + [NT] Do not trigger deprecation warning for dh_python if it
      is followed by a "$".  This prevents false-positives when
      a Makefile variable is used to choose between dh_python2